fixing text alignment and content overlapping issue for mobile screens

--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -132,6 +132,7 @@
             .proyect-description-box {
                 padding: 0px !important;
                 box-shadow: none !important;
+                text-align: center !important;
                 position: relative;
                 z-index: 2;
                 padding: 25px;
